--- a/frontend/index.html
+++ b/frontend/index.html
@@ -40,7 +40,7 @@
         <h2>设置</h2>
         <div id='paste-expiration-panel' class='paste-setting-subitem-panel'>
             <input list='expiration-choices' type='number' min='60' step='1' name='paste-expiration'
-                   id='paste-expiration-input' placeholder='Expiration (secs)'>
+                   id='paste-expiration-input' placeholder='过期时间 (秒)'>
             <datalist id='expiration-choices'>
                 <option value='60'>1分钟</option>
                 <option value='300'>5分钟</option>
@@ -52,7 +52,7 @@
             <label class='small-label' for='paste-expiration-input'>多久后删除你的粘贴板文件. </label>
         </div>
         <div id='paste-passwd-panel' class='paste-setting-subitem-panel'>
-            <input type='text' spellcheck='false' name='paste-expiration' id='paste-passwd-input' placeholder='Password'>
+            <input type='text' spellcheck='false' name='paste-expiration' id='paste-passwd-input' placeholder='输入密码>
             <label class='small-label' for='paste-passwd-input'>使用密码删除或更新粘贴内容.默认随机生成. </label>
         </div>
         <div class='label-line'>
